# pybind11_cmake_demo

./: .gitignore  CMakeLists.txt  README.md  setup.py
cmake_example/: __init__.py
cpp/: CMakeLists.txt  a.cpp
cpp/include/: a.h  b.h  define.h
src/: main.cpp
tests/: test.py
